third_party/move/move-compiler-v2/tests/unit_test/test/parametric_unrelated_row_sibling_no_arg.move
// A no-argument row bracket also rejects unrelated sibling attributes.
address 0x1 {
module M {
    #[test, deprecated]
    fun unrelated_row_sibling_no_arg() {}
}
}
